--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                 <h2>其它</h2>
                 <p><a target="_blank" href="https://ashleyaoligei.github.io/">Ashley Aoligei</a></p>
                 <p><a target="_blank" href="https://pinkcloverz.github.io/">Pink Clover</a></p>
+                <p><a target="_blank" href="https://www.udemy.com/">udemy</a></p>
                 <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07703/a07/">威秀影城</a></p>
                 <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07704/a07/">環球影城</a></p>
             </div>
