--- a/misc/index.html
+++ b/misc/index.html
@@ -25,10 +25,10 @@
 
         <div class="col-lg-3 col-md-6">
           <h2>每週學習</h2>
-          <p><a target="_blank" href="https://sprout.tw/algo2024/">資訊之芽算法班</a></p>
           <p><a target="_blank" href="https://www.youtube.com/@JunyiAcademy">均一教育平台</a></p>
-          <p><a target="_blank" href="https://www.youtube.com/watch?v=X99fpJ2HB0A">Daily Routine English</a></p>
-          <p><a target="_blank" href="https://www.youtube.com/watch?v=HlwiJyOgntk">基本生活問候語20句</a></p>
+          <p><a target="_blank" href="https://www.shinmin.tc.edu.tw/ischool/publish_page/116/?cid=9586">電機資訊統測考科</a></p>
+          <p><a target="_blank" href="https://sprout.tw/algo2024/">資訊之芽算法班</a></p>
+          <p><a target="_blank" href="https://www.khanacademy.org/khan-labs">Khanmigo</a></p>
           <p><a target="_blank" href="https://www.youtube.com/watch?v=JYLJbVECJxs&list=PLfpeXtDSa8rUl8S9NtbPKlg0ikc-rw-LC&index=1">AP Computer Science A</a></p>
         </div>
 
@@ -43,10 +43,19 @@
         </div>
 
         <div class="col-lg-3 col-md-6">
+          <h2>大學課程</h2>
+          <p><a target="_blank" href="https://www.youtube.com/watch?v=4H3b5wATFos&list=PLMHSr8fseBzUvwjKtR6pX0Vv9Q9H-V3lY">台大孔令傑 - C++程式設計</a></p>
+          <p><a target="_blank" href="https://www.youtube.com/watch?v=AVIKFXLCPY8&list=PLJV_el3uVTsPz6CTopeRp2L2t4aL_KgiI">台大李宏毅 - 生成式AI導論</a></p>
+          <p><a target="_blank" href="https://www.youtube.com/watch?v=pjjEqxehG_Y&list=PLj6E8qlqmkFvJuL-gb06J8XHNSj_lfFwP">交大蘇承芳 - 微積分甲(一)</a></p>
+          <p><a target="_blank" href="https://www.youtube.com/watch?v=41jE0dRCb08&list=PLj6E8qlqmkFugDslxZrgDRYo9V2D6B6N6">交大蘇承芳 - 微積分甲(二)</a></p>
+          <p><a target="_blank" href="https://web.stanford.edu/class/cs106b/">Stanford - CS106B</a></p>
+          <p><a target="_blank" href="https://web.stanford.edu/class/cs97si/">Stanford - CS97SI</p></a>
+        </div>
+
+        <div class="col-lg-3 col-md-6">
           <h2>技術</h2>
-          <p><a target="_blank" href="https://www.technice.com.tw/category/review/">生成式AI創新學院</a></p>
+          <p><a target="_blank" href="https://www.technice.com.tw/category/review/">科技島AI創新學院</a></p>
           <p><a target="_blank" href="https://www.sololearn.com/Courses/">SoloLearn</a></p>
-          <p><a target="_blank" href="https://web.stanford.edu/class/cs97si/">Programming Contests</p></a>
           <p><a target="_blank" href="https://arcade.makecode.com/">MakeCode Arcade</a></p>
           <p><a target="_blank" href="https://jamstack.org/generators/">Static Site Generators</a></p>
           <p><a target="_blank" href="https://globalgamejam.org/">Global Game Jam</a></p>
@@ -63,7 +72,6 @@
 
         <div class="col-lg-3 col-md-6">
           <h2>iT邦鐵人賽</h2>
-          <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20128534/ironman/3460">JavaScript基本功</a></p>
           <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20121027/ironman/4552">資料結構與演算法</a></p>
           <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20103434/ironman/1225">資料安全與簡單加密</a></p>
           <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20120178/ironman/2654">LINE BOT</a></p>
@@ -73,37 +81,13 @@
         </div>
 
         <div class="col-lg-3 col-md-6">
-          <h2>教授的課</h2>
-          <p><a target="_blank" href="https://www.youtube.com/watch?v=4H3b5wATFos&list=PLMHSr8fseBzUvwjKtR6pX0Vv9Q9H-V3lY">台大孔令傑 - C++程式設計</a></p>
-          <p><a target="_blank" href="https://www.youtube.com/watch?v=AVIKFXLCPY8&list=PLJV_el3uVTsPz6CTopeRp2L2t4aL_KgiI">台大李宏毅 - 生成式AI導論</a></p>
-          <p><a target="_blank" href="https://www.youtube.com/watch?v=pjjEqxehG_Y&list=PLj6E8qlqmkFvJuL-gb06J8XHNSj_lfFwP">交大蘇承芳 - 微積分甲(一)</a></p>
-          <p><a target="_blank" href="https://www.youtube.com/watch?v=41jE0dRCb08&list=PLj6E8qlqmkFugDslxZrgDRYo9V2D6B6N6">交大蘇承芳 - 微積分甲(二)</a></p>
-          <p><a target="_blank" href="https://web.stanford.edu/class/cs106b/">Stanford - CS106B</a></p>
-        </div>
-
-        <div class="col-lg-3 col-md-6">
-          <h2>線上課程</h2>
-          <p><a target="_blank" href="https://www.openedu.tw/">中華開放教育平台</a></p>
-          <p><a target="_blank" href="https://market.cloud.edu.tw">教育大市集</a></p>
-          <p><a target="_blank" href="https://www.learnmode.net/">LearnMode 學習吧</a></p>
-          <p><a target="_blank" href="http://www.mobileendzone.com/">達陣行動科技學院</a></p>
-          <p><a target="_blank" href="https://www.shinmin.tc.edu.tw/ischool/publish_page/116/?cid=9586">電機資訊統測考科</a></p>
-          <p><a target="_blank" href="https://www.khanacademy.org/khan-labs">Khanmigo</a></p>
-        </div>
-
-        <div class="col-lg-3 col-md-6">
-          <h2>理財</h2>
+          <h2>其它</h2>
           <p><a target="_blank" href="https://rich01.com/">Mr.Market 市場先生</a></p>
           <p><a target="_blank" href="https://www.investopedia.com/simulator/">Investopedia Stock Simulator</a></p>
-        </div>
-
-        <div class="col-lg-3 col-md-6">
-          <h2>其它</h2>
           <p><a target="_blank" href="https://asr.yating.tw/">雅婷逐字稿</a></p>
           <p><a target="_blank" href="https://soundoftext.com/">Sound of Text</a></p>
           <p><a target="_blank" href="https://picwish.com/tw/remove-background">PicWish 照片去背</a></p>
           <p><a target="_blank" href="https://smallpdf.com/zh-TW/edit-pdf">Smallpdf 編輯器</a></p>
-          <p><a target="_blank" href="https://color.adobe.com/zh/create/color-wheel">Adobe Color</a></p>
         </div>
 
       </div>
