--- a/misc/index.html
+++ b/misc/index.html
@@ -25,8 +25,9 @@
 
         <div class="col-lg-3 col-md-6">
           <h2>每週學習</h2>
-          <p><a target="_blank" href="https://www.youtube.com/@JunyiAcademy">均一教育平台</a></p>
+          <p><a target="_blank" href="https://www.youtube.com/@DeltaMOOCx2014">DeltaMOOCx</a></p>
           <p><a target="_blank" href="https://www.shinmin.tc.edu.tw/ischool/publish_page/116/?cid=9586">電機資訊統測考科</a></p>
+          <p><a target="_blank" href="https://www.youtube.com/@JunyiAcademy">均一教育平台</a></p>
           <p><a target="_blank" href="https://sprout.tw/algo2024/">資訊之芽算法班</a></p>
           <p><a target="_blank" href="https://www.khanacademy.org/khan-labs">Khanmigo</a></p>
           <p><a target="_blank" href="https://www.youtube.com/watch?v=JYLJbVECJxs&list=PLfpeXtDSa8rUl8S9NtbPKlg0ikc-rw-LC&index=1">AP Computer Science A</a></p>
