--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="col-lg-3 col-md-6">
                 <h2>YT音樂</h2>
                 <p><a target="_blank" href="https://music.youtube.com/channel/UCkbbMCA40i18i7UdjayMPAg">BLACKPINK (boombayah)</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=rTKqSmX9XhQ&list=PLUsk1io_my_L99NZAkimrzrTsgr-LPR2C">(G)I-DLE (queencard)</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L99NZAkimrzrTsgr-LPR2C">(G)I-DLE (queencard)</a></p>
                 <p><a target="_blank" href="https://music.youtube.com/channel/UCxOqS3cYg4FaHbobICo7nFQ">NewJeans (supershy)</a></p>
                 <p><a target="_blank" href="https://music.youtube.com/channel/UC_4Y1QqJr60C5Z7-eQWy-mw">IVE (eleven)</a></p>
                 <p><a target="_blank" href="https://music.youtube.com/channel/UCEdZAdnnKqbaHOlv8nM6OtA">aespa (nextlevel)</a></p>
