--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container page-main mb-5">
         <div class="row">
             <div class="col-lg-3 col-md-6">
-                <h2>生活與購物</h2>
+                <h2>生活</h2>
                 <p><a target="_blank" href="https://mail.google.com/">Gmail</a></p>
                 <p><a target="_blank" href="https://www.facebook.com/">Facebook</a></p>
                 <p><a target="_blank" href="https://manager.line.biz/">LINE商用</a></p>
@@ -30,7 +30,7 @@
             </div>
 
             <div class="col-lg-3 col-md-6">
-                <h2>充實學習</h2>
+                <h2>學習</h2>
                 <p><a target="_blank" href="https://activity.books.com.tw/books66/">博客來66折</a></p>
                 <p><a target="_blank" href="https://www.coursera.org/">Coursera</a></p>
                 <p><a target="_blank" href="https://www.tenlong.com.tw/search?keyword=python&langs=zh_tw&sort=publication_date">Python Books</a></p>
@@ -40,7 +40,7 @@
             </div>
 
             <div class="col-lg-3 col-md-6">
-                <h2>YT學習</h2>
+                <h2>外語</h2>
                 <p><a target="_blank" href="https://www.youtube.com/@snoweienglish">雪薇英文</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/@SpeakEnglishWithVanessa">English with Vanessa</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/@engvidEmma">English with Emma</a></p>
@@ -50,7 +50,7 @@
             </div>
 
             <div class="col-lg-3 col-md-6">
-                <h2>KPOP</h2>
+                <h2>韓團</h2>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IFcQ2x_1zaCg_hgwJNtlE7">BLACKPINK</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L99NZAkimrzrTsgr-LPR2C">(G)I-DLE</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_LG_Ocihan1cHakC6EG8-_H">aespa</a></p>
@@ -60,21 +60,23 @@
             </div>
 
             <div class="col-lg-3 col-md-6">
-                <h2>投資理財</h2>
+                <h2>理財</h2>
                 <p><a target="_blank" href="https://www.cnyes.com/">鉅亨網</a></p>
                 <p><a target="_blank" href="https://www.stockfeel.com.tw/">StockFeel 股感</a></p>
                 <p><a target="_blank" href="https://www.cmoney.tw/vt/">股市大富翁</a></p>
                 <p><a target="_blank" href="https://www.stockq.org/">StockQ國際股市指數</a></p>
                 <p><a target="_blank" href="https://house123.com.tw/">house123</a></p>
+                <p><a target="_blank" href="https://www.finlab.tw/">FinLab 財經實驗室</a></p>
             </div>
 
             <div class="col-lg-3 col-md-6">
-                <h2>知識與技能</h2>
-                <p><a target="_blank" href="https://www.finlab.tw/">FinLab 財經實驗室</a></p>
+                <h2>競程</h2>
                 <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">演算法筆記</a></p>
                 <p><a target="_blank" href="https://usaco.guide/">USACO Guide</a></p>
                 <p><a target="_blank" href="https://www.facebook.com/codingcompetitions/hacker-cup">Meta Hacker Cup</a></p>
                 <p><a target="_blank" href="https://judge.u-aizu.ac.jp/onlinejudge/">Aizu Online Judge</a></p>
+                <p><a target="_blank" href="https://atcoder.jp/">AtCoder</a></p>
+                <p><a target="_blank" href="https://codeforces.com/">Codeforces</a></p>
             </div>
 
             <div class="col-lg-3 col-md-6">
@@ -83,14 +85,15 @@
                 <p><a target="_blank" href="https://github.com/">GitHub</a></p>
                 <p><a target="_blank" href="https://render.com/">Render</a></p>
                 <p><a target="_blank" href="https://console.developers.google.com/">Google API</a></p>
+                <p><a target="_blank" href="https://www.udemy.com/">udemy</a></p>
                 <p><a target="_blank" href="https://ksisunion.com/">ksisunion</a></p>
             </div>
 
             <div class="col-lg-3 col-md-6">
                 <h2>其它</h2>
                 <p><a target="_blank" href="https://ashleyaoligei.github.io/">Ashley Aoligei</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=sgiPOTWTw1k&list=PLUsk1io_my_JberdJj6Vz4WWE_uPx1QR6">Band LIVE</a></p>
-                <p><a target="_blank" href="https://www.udemy.com/">udemy</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_JberdJj6Vz4WWE_uPx1QR6">Band LIVE</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L3oP0XWAUBtA3ayoeVSwP-">(G)I-DLE (LIVE)</a></p>
                 <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07703/a07/">威秀影城</a></p>
                 <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07704/a07/">環球影城</a></p>
             </div>
