--- a/porn/index.html
+++ b/porn/index.html
@@ -50,15 +50,16 @@
         </div>
         <div class="col-lg-3 col-md-6">
           <h2>Model</h2>
-          <p><a target="_blank" href="https://www.pornhub.com/model/andmlove">andmlove</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/model/badcutegirl">BadCuteGirl</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/model/cutie-kim">Cutie Kim</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/model/mayalis">MayaLis</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/model/mollyredwolf">MollyRedWolf</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/model/nicolove">NicoLove</a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/model/reislin">Reislin</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/model/ssr-peach">SSR Peach</a></p>
           <p><a target="_blank" href="https://www.pornhub.com/model/sweetie-fox">Sweetie Fox</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=63d5bbc6196fc">Squir7een (fc)</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=63fc6e9814a82">Squir7een (82)</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=640720c2560ee">Squir7een (ee)</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=6425d639b1c64">Squir7een (64)</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=645371b07712e">Squir7een (2e)</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=659f1d1718d27">Squir7een (27)</a></p>
+          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=65f745339db15">Squir7een (15)</a></p>
         </div>
         <div class="col-lg-3 col-md-6">
           <h2 class="missav">MissAV</h2>
