--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p><a target="_blank" href="https://activity.books.com.tw/books66/">博客來66折</a></p>
                 <p><a target="_blank" href="https://www.coursera.org/">Coursera</a></p>
                 <p><a target="_blank" href="https://www.tenlong.com.tw/search?keyword=python&langs=zh_tw&sort=publication_date">Python Books</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/@JunyiAcademy">均一教育平台</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@JunyiAcademy">均一教育平台(YT)</a></p>
                 <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
                 <p><a target="_blank" href="https://www.khanacademy.org/">Khan Academy</a></p>
             </div>
@@ -65,7 +65,7 @@
                 <p><a target="_blank" href="https://www.stockfeel.com.tw/">StockFeel 股感</a></p>
                 <p><a target="_blank" href="https://www.cmoney.tw/vt/">股市大富翁</a></p>
                 <p><a target="_blank" href="https://www.stockq.org/">StockQ國際股市指數</a></p>
-                <p><a target="_blank" href="https://house123.com.tw/">house123</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@ohousefun">house123(YT)</a></p>
                 <p><a target="_blank" href="https://www.finlab.tw/">FinLab 財經實驗室</a></p>
             </div>
 
