--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1, maximum-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Bug's Bookmarks">
+    <meta name="description" content="Bug">
     <meta name="author" content="Bug">
-    <title>Bug's Bookmarks</title>
+    <title>Bug</title>
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css?240630">
+    <link rel="stylesheet" href="/static/main.css?241029">
 </head>
 <body class="body-main">
     <div class="jumbotron-main">
@@ -51,8 +51,8 @@
 
             <div class="col-lg-3 col-md-6">
                 <h2>女團</h2>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IFcQ2x_1zaCg_hgwJNtlE7">BLACKPINK</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L99NZAkimrzrTsgr-LPR2C">(G)I-DLE</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IFcQ2x_1zaCg_hgwJNtlE7">BLACKPINK</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_LG_Ocihan1cHakC6EG8-_H">aespa</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_KAcArRfS0By49wAAFGXMmN">IVE</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_Lg418eIpeGdM0dSy7jT5zm">NewJeans</a></p>
@@ -65,8 +65,8 @@
                 <p><a target="_blank" href="https://www.stockfeel.com.tw/">StockFeel 股感</a></p>
                 <p><a target="_blank" href="https://www.cmoney.tw/vt/">股市大富翁</a></p>
                 <p><a target="_blank" href="https://www.stockq.org/">StockQ 國際股市指數</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/@ohousefun">好房網</a></p>
                 <p><a target="_blank" href="https://www.finlab.tw/">FinLab 財經實驗室</a></p>
+                <p><a target="_blank" href="https://house123.com.tw/">house123</a></p>
             </div>
 
             <div class="col-lg-3 col-md-6">
