--- a/misc/index.html
+++ b/misc/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1, maximum-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Bug's Bookmarks">
+    <meta name="description" content="Bug">
     <meta name="author" content="Bug">
-    <title>Misc | Bug's Bookmarks</title>
+    <title>Misc | Bug</title>
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css?240630">
+    <link rel="stylesheet" href="/static/main.css?241029">
 
   </head>
 
