--- a/misc/eecs.html
+++ b/misc/eecs.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1, maximum-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Bug's Bookmarks">
+    <meta name="description" content="Bug">
     <meta name="author" content="Bug">
-    <title>EECS | Bug's Bookmarks</title>
+    <title>中學電資 | Bug</title>
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css?240507">
+    <link rel="stylesheet" href="/static/main.css?241028">
 
   </head>
 
   <body class="body-misc">
     <div class="jumbotron-misc">
       <div class="container">
-        <h1>EECS <small><a class="text-white smaller" href="/">&#8962;</a></small></h1>
+        <h1>中學電資 <small><a class="text-white smaller" href="/">&#8962;</a></small></h1>
       </div>
     </div>
 
