--- a/misc/index.html
+++ b/misc/index.html
@@ -9,10 +9,7 @@
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css?241029">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/static/main.css?241028">
   </head>
 
   <body class="body-misc">
@@ -27,9 +24,9 @@
 
         <div class="col-lg-3 col-md-6">
           <h2>高中</h2>
+          <p><a target="_blank" href="/misc/eecs">中學電資</a></p>
+          <p><a target="_blank" href="/misc/physics">中學物理</a></p>
           <p><a target="_blank" href="https://www.youtube.com/@DeltaMOOCx2014">DeltaMOOCx</a></p>
-          <p><a target="_blank" href="/misc/eecs">電機資訊基礎學科</a></p>
-          <p><a target="_blank" href="/misc/physics">高中物理</a></p>
           <p><a target="_blank" href="https://www.youtube.com/watch?v=JYLJbVECJxs&list=PLfpeXtDSa8rUl8S9NtbPKlg0ikc-rw-LC">AP Computer Science A</a></p>
           <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLlrxD0HtieHhS8VzuMCfQD4uJ9yne1mE6">MS - Python for Beginners</a></p>
           <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLlrxD0HtieHiXd-nEby-TMCoUNwhbLUnj">MS - More Python for Beginners</a></p>
