--- a/misc/physics.html
+++ b/misc/physics.html
@@ -3,28 +3,28 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1, maximum-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Bug's Bookmarks">
+    <meta name="description" content="Bug">
     <meta name="author" content="Bug">
-    <title>Physics | Bug's Bookmarks</title>
+    <title>中學物理 | Bug</title>
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css?240507">
+    <link rel="stylesheet" href="/static/main.css?241028">
 
   </head>
 
   <body class="body-misc">
     <div class="jumbotron-misc">
       <div class="container">
-        <h1>Physics <small><a class="text-white smaller" href="/">&#8962;</a></small></h1>
+        <h1>中學物理 <small><a class="text-white smaller" href="/">&#8962;</a></small></h1>
       </div>
     </div>
 
     <div class="container page-misc mb-5">
       <div class="row">
 
-        <div class="col-lg-6 col-md-12">
-          <h3 class="mt-3 fw-bold">10年級物理</h3>
+        <div class="col-lg-4 col-md-12">
+          <h3 class="mt-3 fw-bold">G10</h3>
           <ul class="outline">
             <li><a href="https://www.youtube.com/watch?v=O7Jx-U6A-D8&list=PLp2Y5q36tB-Nhp6LxwrKX81wUdoT5IjoJ" target="_blank">物理與物質</a></li>
             <li><a href="https://www.youtube.com/watch?v=08e_hubHLa4&list=PLp2Y5q36tB-Ov-CQDmrGVDgZOXZwuWQqm" target="_blank">物質的交互作用</a></li>
@@ -36,8 +36,8 @@
           </ul>
         </div>
 
-        <div class="col-lg-6 col-md-12">
-          <h3 class="mt-3 fw-bold">11年級物理</h3>
+        <div class="col-lg-4 col-md-12">
+          <h3 class="mt-3 fw-bold">G11</h3>
           <ul class="outline">
             <li><a href="https://www.youtube.com/watch?v=cYzznRqJa3s&list=PLp2Y5q36tB-MaCnpxNxcE2Ol_lkB-xlfG" target="_blank">週期運動</a></li>
             <li><a href="https://www.youtube.com/watch?v=W-3HVMVdpxE&list=PLp2Y5q36tB-PidO4uSshz_eFCK1iM2WVq" target="_blank">直線運動</a></li>
@@ -52,8 +52,8 @@
           </ul>
         </div>
 
-        <div class="col-lg-6 col-md-12">
-          <h3 class="mt-3 fw-bold">12年級物理</h3>
+        <div class="col-lg-4 col-md-12">
+          <h3 class="mt-3 fw-bold">G12</h3>
           <ul class="outline">
             <li><a href="https://www.youtube.com/watch?v=E4ukafg8A-M&list=PLp2Y5q36tB-MQmSbQYoNadnIr48J6_qZE" target="_blank">波動</a></li>
             <li><a href="https://www.youtube.com/watch?v=HEPRZPR1V04&list=PLp2Y5q36tB-MKRWJD_qdHzsRE0Td2YD7n" target="_blank">聲波</a></li>
