--- a/misc/physics.html
+++ b/misc/physics.html
@@ -16,7 +16,7 @@
   <body class="body-misc">
     <div class="jumbotron-misc">
       <div class="container">
-        <h1>中學物理 <small><a class="text-white smaller" href="/">&#8962;</a></small></h1>
+        <h1>中學物理 <small> <a class="text-white smaller" href="/misc">&#9712;</a> </small> </h1>
       </div>
     </div>
 
