--- a/misc/index.html
+++ b/misc/index.html
@@ -15,7 +15,7 @@
   <body class="body-misc">
     <div class="jumbotron-misc">
       <div class="container">
-        <h1>Misc <small><a class="text-white smaller" href="/">&#8962;</a></small></h1>
+        <h1>Misc <small> <a class="text-white smaller" href="/">&#9707;</a> </small> </h1>
       </div>
     </div>
 
@@ -24,8 +24,8 @@
 
         <div class="col-lg-3 col-md-6">
           <h2>高中</h2>
-          <p><a target="_blank" href="/misc/eecs">中學電資</a></p>
-          <p><a target="_blank" href="/misc/physics">中學物理</a></p>
+          <p><a href="/misc/eecs">中學電資</a></p>
+          <p><a href="/misc/physics">中學物理</a></p>
           <p><a target="_blank" href="https://www.youtube.com/@DeltaMOOCx2014">DeltaMOOCx</a></p>
           <p><a target="_blank" href="https://www.youtube.com/watch?v=JYLJbVECJxs&list=PLfpeXtDSa8rUl8S9NtbPKlg0ikc-rw-LC">AP Computer Science A</a></p>
           <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLlrxD0HtieHhS8VzuMCfQD4uJ9yne1mE6">MS - Python for Beginners</a></p>
