--- a/food/index.html
+++ b/food/index.html
@@ -25,6 +25,7 @@
         <div class="col-lg-3 col-md-6">
           <h2>鳳山 & 前鎮</h2>
           <p><a target="_blank" href="https://sunyat.pixnet.net/blog/post/71299732">榕樹下璞味綿綿冰<small> | 黃埔新村</small></a></p>
+          <p><a target="_blank" href="https://hoolee.tw/gulucurry/">咕嚕咕嚕家<small> | 五甲家樂福</small></a></p>
         </div>
 
         <div class="col-lg-3 col-md-6">
@@ -35,6 +36,7 @@
 
         <div class="col-lg-3 col-md-6">
           <h2>前金 & 鹽埕</h2>
+          <p><a target="_blank" href="https://hoolee.tw/oilricebox/">壹個圓油飯盒子<small> | 捷運前金站</small></a></p>
           <p><a target="_blank" href="https://angelala.tw/yi-mu/">乙木<small> | 貝佛街餐酒坊</small></a></p>
         </div>
 
