--- a/food/index.html
+++ b/food/index.html
@@ -24,27 +24,57 @@
 
         <div class="col-lg-3 col-md-6">
           <h2>鳳山 & 前鎮</h2>
-          <p><a target="_blank" href="https://sunyat.pixnet.net/blog/post/71299732">榕樹下璞味綿綿冰<small> | 黃埔新村</small></a></p>
-          <p><a target="_blank" href="https://hoolee.tw/gulucurry/">咕嚕咕嚕家<small> | 五甲家樂福</small></a></p>
+          <p><a target="_blank" class="fw-bold" href="https://www.instagram.com/pureway_fengshan/">璞味綿綿冰鳳山<small> | 黃埔新村</small></a>
+            <br>鳳山區黃埔新村西四巷38號
+          </p>
+          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/Kashiwagi0827/">咕嚕咕嚕家<small> | 五甲家樂福</small></a>
+            <br>鳳山區五甲二路468號
+          </p>
         </div>
 
         <div class="col-lg-3 col-md-6">
           <h2>苓雅 & 新興</h2>
-          <p><a target="_blank" href="https://hoolee.tw/longzexuanramen/">瀧澤軒食堂<small> | 文化中心</small></a></p>
-          <p><a target="_blank" href="https://hoolee.tw/suxiangnoodle/">酥香居手作一窩絲<small> | 蘋果市集</small></a></p>
+          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/lzxst">瀧澤軒食堂<small> | 文化中心</small></a>
+            <br>苓雅區林泉街44號
+          </p>
+          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/suxiangju">酥香居<small> | 蘋果市集</small></a>
+            <br>苓雅區武廟路135巷9號
+          </p>
+          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/profile.php?id=100092438770416">巴索托咖啡館<small> | 文化中心</small></a>
+            <br>苓雅區林南街6號
+          </p>
+          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/OstarAllstar">歐仕達<small> | 信義國小</small></a>
+            <br>新興區仁愛一街98號
+          </p>
         </div>
 
         <div class="col-lg-3 col-md-6">
           <h2>前金 & 鹽埕</h2>
-          <p><a target="_blank" href="https://hoolee.tw/oilricebox/">壹個圓油飯盒子<small> | 捷運前金站</small></a></p>
-          <p><a target="_blank" href="https://angelala.tw/yi-mu/">乙木<small> | 貝佛街餐酒坊</small></a></p>
+          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/OilriceBox/">壹個圓油飯<small> | 捷運前金站</small></a>
+            <br>前金區自強一路8號
+          </p>
+          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/profile.php?id=100063817637156">乙木<small> | 貝佛街餐酒坊</small></a>
+            <br>前金區前金二街81號
+          </p>
         </div>
 
         <div class="col-lg-3 col-md-6">
           <h2>三民 & 左營</h2>
-          <p><a target="_blank" href="https://hoolee.tw/youmeiyou-noodles/">有沒有牛肉麵<small> | 輕軌高雄高工站</small></a></p>
-          <p><a target="_blank" href="https://bearlovefood.com/blog/post/teppanyaki">祤棠鐵板燒<small> | 漢神巨蛋</small></a></p>
-          <p><a target="_blank" href="https://angelala.tw/rui-fish/">瑞弘號深海鮮魚湯<small> | 自由市場</small></a></p>
+          <p><a target="_blank" class="fw-bold" href="https://doyouhavebeefnoodles.com/">有沒有牛肉麵三民<small> | 輕軌高雄高工站</small></a>
+            <br>三民區建工路479號
+          </p>
+          <p><a target="_blank" class="fw-bold" href="https://nowhot01.com/yutang-teppanyaki/">祤棠鐵板燒*<small> | 漢神巨蛋</small></a>
+            <br>左營區新莊一路167號
+          </p>
+          <p><a target="_blank" class="fw-bold" href="https://angelala.tw/rui-fish/">瑞弘號鮮魚湯*<small> | 自由市場</small></a>
+            <br>左營區自由二路426之1號
+          </p>
+          <p><a target="_blank" class="fw-bold" href="https://yuexinfang.weebly.com/">粵心坊博愛<small> | 生態園區</small></a>
+            <br>左營區博愛三路336號
+          </p>
+          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/minge8.0">旻哥古早味鼎山<small> | 鼎山家樂福</small></a>
+            <br>三民區鼎山街492號
+          </p>
         </div>
 
       </div>
