--- a/food/index.html
+++ b/food/index.html
@@ -24,6 +24,9 @@
 
         <div class="col-lg-3 col-md-6">
           <h2>鳳山 & 前鎮</h2>
+          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/profile.php?id=100088263068415">有開鐵板燒<small> | 青年路二段</small></a>
+            <br>鳳山區文化西路68號
+          </p>
           <p><a target="_blank" class="fw-bold" href="https://www.instagram.com/pureway_fengshan/">璞味綿綿冰鳳山<small> | 黃埔新村</small></a>
             <br>鳳山區黃埔新村西四巷38號
           </p>
@@ -50,7 +53,7 @@
 
         <div class="col-lg-3 col-md-6">
           <h2>前金 & 鹽埕</h2>
-          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/OilriceBox/">壹個圓油飯<small> | 捷運前金站</small></a>
+          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/OilriceBox/">壹個圓油飯<small> | 捷運前金</small></a>
             <br>前金區自強一路8號
           </p>
           <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/profile.php?id=100063817637156">乙木<small> | 貝佛街餐酒坊</small></a>
@@ -60,7 +63,7 @@
 
         <div class="col-lg-3 col-md-6">
           <h2>三民 & 左營</h2>
-          <p><a target="_blank" class="fw-bold" href="https://doyouhavebeefnoodles.com/">有沒有牛肉麵三民<small> | 輕軌高雄高工站</small></a>
+          <p><a target="_blank" class="fw-bold" href="https://doyouhavebeefnoodles.com/">有沒有牛肉麵三民<small> | 輕軌高雄高工</small></a>
             <br>三民區建工路479號
           </p>
           <p><a target="_blank" class="fw-bold" href="https://nowhot01.com/yutang-teppanyaki/">祤棠鐵板燒*<small> | 漢神巨蛋</small></a>
