--- a/food/index.html
+++ b/food/index.html
@@ -63,7 +63,7 @@
           <p><a target="_blank" class="fw-bold" href="https://doyouhavebeefnoodles.com/">有沒有牛肉麵三民<small> | 輕軌高雄高工</small></a>
             <br>三民區建工路479號
           </p>
-          <p><a target="_blank" class="fw-bold" href="https://nowhot01.com/yutang-teppanyaki/">祤棠鐵板燒*<small> | 漢神巨蛋</small></a>
+          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/profile.php?id=61558480287016">祤棠鐵板燒<small> | 漢神巨蛋</small></a>
             <br>左營區新莊一路167號
           </p>
           <p><a target="_blank" class="fw-bold" href="https://angelala.tw/rui-fish/">瑞弘號鮮魚湯*<small> | 自由市場</small></a>
