--- a/misc/index.html
+++ b/misc/index.html
@@ -71,6 +71,8 @@
           <p><a target="_blank" href="https://shaform.com/csdream/">資夢</a></p>
           <p><a target="_blank" href="https://www.technice.com.tw/category/review/">科技島AI創新學院</a></p>
           <p><a target="_blank" href="https://www.sololearn.com/Courses/">SoloLearn</a></p>
+          <p><a target="_blank" href="https://projects.raspberrypi.org/en">Raspberry Pi Projects</a></p>
+          <p><a target="_blank" href="https://w3techs.com/sites">W3Techs</a></p>
         </div>
 
         <div class="col-lg-3 col-md-6">
@@ -92,9 +94,7 @@
 
         <div class="col-lg-3 col-md-6">
           <h2>其它</h2>
-          <p><a target="_blank" href="https://arcade.makecode.com/">MakeCode Arcade</a></p>
-          <p><a target="_blank" href="https://projects.raspberrypi.org/en">Raspberry Pi Projects</a></p>
-          <p><a target="_blank" href="https://w3techs.com/sites">W3Techs</a></p>
+          <p><a href="/misc/vsd2">心室中膈缺損<b>膜邊型</b>5.25mm</a></p>
         </div>
 
       </div>
