--- a/misc/index.html
+++ b/misc/index.html
@@ -94,7 +94,8 @@
 
         <div class="col-lg-3 col-md-6">
           <h2>其它</h2>
-          <p><a href="/misc/vsd2">心室中膈缺損<b>膜邊型</b>5.25mm</a></p>
+          <p><a target="_blank" href="https://www.youtube.com/playlist?list=PL0fd7lJVVfj-inRiUwiV4-CtARX9GTIix">VSD<b>膜邊型</b>5.25mm</a></p>
+          <p><a target="_blank" href="https://www.youtube.com/playlist?list=PL0fd7lJVVfj_rehHLU6YBCu-AJbax4ERZ">上駿客服</p>
         </div>
 
       </div>
