--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <p><a target="_blank" href="https://www.youtube.com/@SpeakEnglishWithVanessa">English with Vanessa</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/@EnglishwithLucy">English with Lucy</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/@yuka_japaneseteacher">Japanese with Yuka</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@KoreanwithMissVicky">Korean with Miss Vicky</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/watch?v=tpIctyqH29Q&list=PL8dPuuaLjXtNlUrzyH5r6jN9ulIgZBpdo">CS Preview</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLOL5pqOhjrgENh5jJ-JMAdctFBug8lYY-">Michael J. Sandel - Justice</a></p>
             </div>
 
             <div class="col-lg-3 col-md-6">
