--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             </div>
 
             <div class="col-lg-3 col-md-6">
-                <h2>理財</h2>
+                <h2>證券</h2>
                 <p><a target="_blank" href="https://www.cnyes.com/">鉅亨網</a></p>
                 <p><a target="_blank" href="https://www.stockfeel.com.tw/">StockFeel 股感</a></p>
                 <p><a target="_blank" href="https://www.cmoney.tw/vt/">股市大富翁</a></p>
                 <p><a target="_blank" href="https://www.stockq.org/">StockQ 國際股市指數</a></p>
                 <p><a target="_blank" href="https://www.finlab.tw/">FinLab 財經實驗室</a></p>
-                <p><a target="_blank" href="https://house123.com.tw/">house123</a></p>
+                <p><a target="_blank" href="https://rich01.com/">Mr.Market 市場先生</a></p>
             </div>
 
             <div class="col-lg-3 col-md-6">
