--- a/misc/index.html
+++ b/misc/index.html
@@ -23,13 +23,14 @@
       <div class="row">
 
         <div class="col-lg-3 col-md-6">
-          <h2>高中</h2>
+          <h2>中學</h2>
           <p><a href="/misc/eecs">中學電資</a></p>
           <p><a href="/misc/physics">中學物理</a></p>
           <p><a target="_blank" href="https://www.youtube.com/@DeltaMOOCx2014">DeltaMOOCx</a></p>
           <p><a target="_blank" href="https://www.youtube.com/watch?v=JYLJbVECJxs&list=PLfpeXtDSa8rUl8S9NtbPKlg0ikc-rw-LC">AP Computer Science A</a></p>
           <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLlrxD0HtieHhS8VzuMCfQD4uJ9yne1mE6">MS - Python for Beginners</a></p>
           <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLlrxD0HtieHiXd-nEby-TMCoUNwhbLUnj">MS - More Python for Beginners</a></p>
+          <p><a target="_blank" href="https://www.youcubed.org/">youcubed</a></p>
         </div>
 
         <div class="col-lg-3 col-md-6">
@@ -76,20 +77,20 @@
         </div>
 
         <div class="col-lg-3 col-md-6">
-          <h2>理財</h2>
-          <p><a target="_blank" href="https://rich01.com/">Mr.Market 市場先生</a></p>
-          <p><a target="_blank" href="https://www.investopedia.com/simulator/">Investopedia Stock Simulator</a></p>
-        </div>
-
-        <div class="col-lg-3 col-md-6">
           <h2>工具</h2>
+          <p><a target="_blank" href="https://websim.ai/">websim.ai</a></p>
           <p><a target="_blank" href="https://edublocks.org/">EduBlocks</a></p>
-
           <p><a target="_blank" href="https://www.khanacademy.org/khan-labs">Khanmigo</a></p>
           <p><a target="_blank" href="https://asr.yating.tw/">雅婷逐字稿</a></p>
           <p><a target="_blank" href="https://soundoftext.com/">Sound of Text</a></p>
           <p><a target="_blank" href="https://picwish.com/tw/remove-background">PicWish 照片去背</a></p>
           <p><a target="_blank" href="https://smallpdf.com/zh-TW/edit-pdf">Smallpdf 編輯器</a></p>
+        </div>
+
+        <div class="col-lg-3 col-md-6">
+          <h2>理財</h2>
+          <p><a target="_blank" href="https://house123.com.tw/">house123</a></p>
+          <p><a target="_blank" href="https://www.investopedia.com/simulator/">Investopedia Stock Simulator</a></p>
         </div>
 
         <div class="col-lg-3 col-md-6">
