--- a/food/index.html
+++ b/food/index.html
@@ -75,6 +75,9 @@
           <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/minge8.0">旻哥古早味鼎山<small> | 鼎山家樂福</small></a>
             <br>三民區鼎山街492號
           </p>
+          <p><a target="_blank" class="fw-bold" href="https://angelala.tw/fu-thai-thai/">腹泰泰泰式便當<small> | 漢神巨蛋</small></a>
+            <br>左營區明華一路158號
+          </p>
         </div>
 
       </div>
