--- a/misc/index.html
+++ b/misc/index.html
@@ -34,11 +34,16 @@
         </div>
 
         <div class="col-lg-3 col-md-6">
-          <h2>大學</h2>
-          <p><a target="_blank" href="https://www.youtube.com/watch?v=4H3b5wATFos&list=PLMHSr8fseBzUvwjKtR6pX0Vv9Q9H-V3lY">台大孔令傑 - C++程式設計</a></p>
-          <p><a target="_blank" href="https://www.youtube.com/watch?v=AVIKFXLCPY8&list=PLJV_el3uVTsPz6CTopeRp2L2t4aL_KgiI">台大李宏毅 - 生成式AI導論</a></p>
-          <p><a target="_blank" href="https://www.youtube.com/watch?v=pjjEqxehG_Y&list=PLj6E8qlqmkFvJuL-gb06J8XHNSj_lfFwP">交大蘇承芳 - 微積分甲(一)</a></p>
-          <p><a target="_blank" href="https://www.youtube.com/watch?v=41jE0dRCb08&list=PLj6E8qlqmkFugDslxZrgDRYo9V2D6B6N6">交大蘇承芳 - 微積分甲(二)</a></p>
+          <h2>國內大學</h2>
+          <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLMHSr8fseBzUvwjKtR6pX0Vv9Q9H-V3lY">台大孔令傑 - C++程式設計</a></p>
+          <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLJV_el3uVTsPz6CTopeRp2L2t4aL_KgiI">台大李宏毅 - 生成式AI導論24</a></p>
+          <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLj6E8qlqmkFvJuL-gb06J8XHNSj_lfFwP">交大蘇承芳 - 微積分甲(一)</a></p>
+          <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLj6E8qlqmkFugDslxZrgDRYo9V2D6B6N6">交大蘇承芳 - 微積分甲(二)</a></p>
+          <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLu3zreQhydbpTXp9KwGX2V0WxrvOm3Fx4">雲科蕭佳明 - ROS基礎教學</a></p>
+        </div>
+
+        <div class="col-lg-3 col-md-6">
+          <h2>國外大學</h2>
           <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLJLIYIKY1aBzR3KvoH30IZLABDs6ACPvc">UM - Getting Started with Python</a></p>
           <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLJLIYIKY1aBzXsbo4mBQijCK8xLU4Ocug">UM - Python Data Structures</a></p>
           <p><a target="_blank" href="https://web.stanford.edu/class/cs106b/">Stanford - CS106B</a></p>
@@ -91,14 +96,11 @@
           <h2>理財</h2>
           <p><a target="_blank" href="https://house123.com.tw/">house123</a></p>
           <p><a target="_blank" href="https://www.investopedia.com/simulator/">Investopedia Stock Simulator</a></p>
-        </div>
 
-        <div class="col-lg-3 col-md-6">
           <h2>其它</h2>
           <p><a target="_blank" href="https://www.youtube.com/playlist?list=PL0fd7lJVVfj-inRiUwiV4-CtARX9GTIix">VSD<b>膜邊型</b>5.25mm</a></p>
           <p><a target="_blank" href="https://www.youtube.com/playlist?list=PL0fd7lJVVfj_rehHLU6YBCu-AJbax4ERZ">上駿客服</p>
         </div>
-
       </div>
     </div>
 
